--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "ubuntu", sans-serif;
+}
+
 /* Scroll Booster */
 .app {
     top: 0%;
@@ -8,6 +15,9 @@
     position: absolute;
     display: block;
     cursor: grab;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
     /* border: 10px solid #460a78; */
     /* overflow: scroll; */
 }
@@ -20,6 +30,129 @@
     position: absolute;
     /* border: 10px solid #edb197; */
     /* padding: 50px; */
-    background: #44bdf6;
-
+    /* background: #44bdf6; */
 }
+
+body {
+    min-height: 100vh;
+    transition: background-color 0.4s ease-in-out;
+  }
+
+/* Left Navigation */
+.navigation {
+  /*   top: 30%:
+  bottom: 30%; */
+  position: fixed;
+  /*   inset: 20px; */
+  /* background: #282828; */
+  width: 80px;
+  /* border-left: 10px solid #1212; */
+  border-left: 10px solid transparent;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  /*   border-radius: 50px; */
+  overflow: hidden;
+  box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.25);
+  transition: 0.5s;
+}
+
+.arrow-up {
+  position: absolute;
+  top: 0px;
+  right: 15px;
+  width: 50px;
+  height: 25px;
+  background: transparent;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrow-up .icon i {
+  cursor: pointer;
+}
+
+.toggle {
+  position: absolute;
+  bottom: 0px;
+  right: 15px;
+  width: 50px;
+  height: 25px;
+  background: transparent;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navigation ul {
+  position: absolute;
+  top: 25px;
+  bottom: 25px;
+  left: 0;
+  width: 100%;
+  padding-left: 0;
+  overflow: scroll;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.navigation ul li {
+  position: relative;
+  list-style: none;
+  width: 100%;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
+
+.navigation ul li:hover {
+  /*   background: #c17aff; */
+  color: #222;
+}
+
+.navigation ul li::hover::before,
+.navigation ul li::hover::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+}
+
+.navigation ul li a {
+  position: relative;
+  width: 100%;
+  display: flex;
+  text-decoration: none;
+  color: #000000;
+  font-weight: 400;
+}
+
+.navigation ul li:hover a {
+  color: #f1f1f1;
+}
+
+.navigation ul li a .icon {
+  position: relative;
+  display: block;
+  min-width: 60px;
+  height: 60px;
+  line-height: 70px;
+  text-align: center;
+}
+
+.navigation ul li a .icon i {
+  font-size: 1.75em;
+}
+
+.navigation ul::-webkit-scrollbar {
+  display: none;
+}
+
+/* Progress bar 
+.progress{
+  position: fixed;
+} */
