new file:   assets/images/mapa_geral_2.png 	new file:   assets/images/mapa_geral_3.png 	new file:   assets/images/regiao_1.png 	new file:   assets/images/regiao_2.png 	new file:   assets/images/regiao_3.png 	new file:   assets/images/regiao_4.png 	new file:   assets/svg/regiao_1.svg 	new file:   assets/svg/regiao_2.svg 	new file:   assets/svg/regiao_3.svg 	modified:   css/main.css 	new file:   css/svg.css 	modified:   index.html 	modified:   js/main.js

--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,6 @@
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
-    /* border: 10px solid #460a78; */
-    /* overflow: scroll; */
 }
 
 .app-inner {
@@ -28,32 +26,57 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    /* border: 10px solid #edb197; */
-    /* padding: 50px; */
-    /* background: #44bdf6; */
 }
 
-body {
-    min-height: 100vh;
-    transition: background-color 0.4s ease-in-out;
-  }
-
 /* Left Navigation */
-.navigation {
-  /*   top: 30%:
-  bottom: 30%; */
+.sidenav-animals {
   position: fixed;
-  /*   inset: 20px; */
-  /* background: #282828; */
-  width: 80px;
-  /* border-left: 10px solid #1212; */
-  border-left: 10px solid transparent;
+  left: -80px;
+  width: 100px;
+  overflow: hidden;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  /*   border-radius: 50px; */
-  overflow: hidden;
   box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.25);
+  transition: left 1.2s ease;
+}
+
+.sidenav-animals.active {
+  left: 0px;
+}
+
+.arrow-toggle i {
+  transform: rotate(0deg);
+  transition: transform 0.6s ease-in-out;
+}
+
+.arrow-toggle i.icon_rotate {
+  transform: rotate(180deg);
+}
+
+.navigation {
+  top: inherit;
+  bottom: inherit;
+  position: fixed;
+  width: 80px;
+  border-left: 10px solid transparent;
+  overflow: hidden;
   transition: 0.5s;
+  background-color: transparent;
+}
+
+.arrow-toggle {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  left: 80px;
+  width: 20px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
 
 .arrow-up {
@@ -69,11 +92,7 @@ body {
   align-items: center;
 }
 
-.arrow-up .icon i {
-  cursor: pointer;
-}
-
-.toggle {
+.arrow-down {
   position: absolute;
   bottom: 0px;
   right: 15px;
@@ -108,7 +127,6 @@ body {
 }
 
 .navigation ul li:hover {
-  /*   background: #c17aff; */
   color: #222;
 }
 
@@ -152,7 +170,31 @@ body {
   display: none;
 }
 
+
 /* Progress bar 
 .progress{
   position: fixed;
 } */
+
+/* Hover Regions SVG */
+#layer-region-1-svg{
+  z-index: 100;
+  position: absolute;
+  top: 450px;
+  left: -110px;
+  width: 986px;
+  height: 1216px;
+}
+
+.region_1_svg{
+  filter: blur(3.5px) 
+          drop-shadow(13px 13px 13px rgb(0 0 0 / 0.4));
+  transition: transform 750ms;
+}
+
+.region_1_svg.hovered{
+  filter: blur(0.5px)
+          drop-shadow(15px 15px 15px rgb(0 0 0 / 0.4));
+  transform: translateY(-10px);
+  cursor: pointer;
+}
