new file:   assets/images/boto-cinza.png 	new file:   assets/images/card-animal.png 	new file:   assets/images/card-mascote.png 	new file:   assets/images/card-postcards.png 	new file:   assets/images/cenario-regiao-4-1.png 	new file:   assets/images/cenario-regiao-4-x.png 	new file:   assets/images/cenario-regiao-4.png 	new file:   assets/images/faq.png 	new file:   assets/images/jaguatirica.png 	new file:   assets/images/mapa_geral_4.png 	new file:   assets/images/peixe-boi-desfocado.png 	new file:   assets/images/peixe-boi-icon.png 	new file:   assets/images/peixe-boi-marinho.png 	new file:   assets/images/peixe-boi.png 	new file:   assets/images/periquito-cara-suja.png 	new file:   assets/images/sapo-araripe.png 	new file:   assets/images/soldadinho-araripe.png 	new file:   assets/images/surucucu-pico-jaca.png 	new file:   assets/images/tamandua-mirim.png 	new file:   assets/images/tatu-bola-nordeste.png 	new file:   assets/images/veado-catingueiro.png 	modified:   css/main.css 	modified:   css/svg.css 	modified:   css/svg/regiao_1.svg 	modified:   css/svg/regiao_2.svg 	modified:   css/svg/regiao_3.svg 	new file:   fonts/Bonoco.ttf 	new file:   fonts/Rubik-Regular.ttf 	modified:   index.html 	modified:   js/main.js

--- a/css/svg.css
+++ b/css/svg.css
@@ -10,9 +10,9 @@
     transform: translateY(-10px);
     cursor: pointer;
 }
-/* .regiao_1_svg:hover{
+.regiao_1_svg:hover{
    filter: blur(0);
    filter: drop-shadow(15px 15px 15px rgb(0 0 0 / 0.4));
    transform: translateY(-10px);
    cursor: pointer;
-} */
+}
