--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Bonoco';
+  src: url('./../fonts/Bonoco.ttf') format('embedded-opentype'), /* Internet Explorer */
+       url('./../fonts/Bonoco.ttf') format('woff2'),             /* Super Modern Browsers */
+       url('./../fonts/Bonoco.ttf') format('woff'),              /* Pretty Modern Browsers */
+       url('./../fonts/Bonoco.ttf') format('truetype'),          /* Safari, Android, iOS */
+       url('./../fonts/Bonoco.ttf') format('ttf'),               /* TrueTypeFont *
+       url('./../fonts/Bonoco.ttf') format('svg');               /* Legacy iOS */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -62,6 +72,7 @@
   overflow: hidden;
   transition: 0.5s;
   background-color: transparent;
+  background-color: #ffffff26;
 }
 
 .arrow-toggle {
@@ -76,6 +87,7 @@
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   background-color: rgba(0, 0, 0, 0.15);
+  background-color: #ffffff12;
   cursor: pointer;
 }
 
@@ -149,9 +161,9 @@
   font-weight: 400;
 }
 
-.navigation ul li:hover a {
+/* .navigation ul li:hover a {
   color: #f1f1f1;
-}
+} */
 
 .navigation ul li a .icon {
   position: relative;
@@ -170,31 +182,319 @@
   display: none;
 }
 
-
-/* Progress bar 
-.progress{
-  position: fixed;
-} */
-
-/* Hover Regions SVG */
-#layer-region-1-svg{
-  z-index: 100;
-  position: absolute;
-  top: 450px;
-  left: -110px;
-  width: 986px;
-  height: 1216px;
+.fa-chevron-left, .fa-chevron-up, .fa-chevron-down{
+  color: white;
 }
 
-.region_1_svg{
-  filter: blur(3.5px) 
+/* Hover Regions SVG */
+.region{
+  position: absolute;
+  z-index: 100;
+  filter: blur(3.5px)
           drop-shadow(13px 13px 13px rgb(0 0 0 / 0.4));
   transition: transform 750ms;
 }
 
-.region_1_svg.hovered{
+.region.hovered{
   filter: blur(0.5px)
           drop-shadow(15px 15px 15px rgb(0 0 0 / 0.4));
   transform: translateY(-10px);
   cursor: pointer;
+}
+
+#region_1{
+  top: 600px;
+  left: 20px; 
+  /* top: 578px;
+  left: 9px; */
+}
+
+#region_2{
+  top: 1335px;
+  left: 165px;
+}
+
+#region_3{
+  top: 1070px;
+  left: 835px;
+}
+
+#region_4{
+  top: 372px;
+  left: 1114px;
+}
+
+
+.end-default{
+  position: fixed; 
+  top: 92%;
+  width: 100%; 
+  left: 15%;
+  right: 20%;
+}
+
+/* Progress bar */
+.pb-progress-default{
+  height: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Button post */
+.btn-default{
+  position: fixed;
+  bottom: 4%;
+  right: 20px;
+  font-family: 'Rubik';
+  /* font-weight: 400; */
+  font-size: 15px;
+  line-height: 40px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  /* text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.25); */
+  text-shadow: 2px 2px 10px #000000;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Button help */
+.btn-default-faq{
+  position: fixed;
+  top: 4%;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../assets/images/faq.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  
+}
+
+.btn-default-faq:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+/* Icones - Animais */
+.icon-animal {
+  position: relative;
+  display: block;
+  min-width: 60px;
+  height: 60px;
+  line-height: 70px;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: inline-block;
+}
+
+.peixe-boi-icon-deactivated{
+  background-image: url(../assets/images/peixe-boi-icon.png);
+  background-size: 95%;
+}
+
+.peixe-boi-icon-activated{
+  background-image: url(../assets/images/peixe-boi.png);
+  background-size: 95%;
+}
+
+/* Região 4 */
+#cenario-region-4{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color:#00000063;
+}
+
+.app-2{
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  right: 11%;
+  bottom: 12%;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: grab;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#animal-region-4-1{
+  position: absolute;
+  width: 500px;
+  height:254px;
+  top: 874px;
+  left: 80px;
+  content:url("../assets/images/peixe-boi-desfocado.png");
+}
+
+#animal-region-4-1.completed{
+  content:url("../assets/images/peixe-boi.png");
+  animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.btn-default-close{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  font-size: 20px;
+}
+
+.btn-secondary-close{
+  position: absolute;
+  top: 23px;
+  right: 33px;
+  color: #254DAE;
+  font-size: 20px;
+}
+
+.btn-third-close{
+  position: absolute;
+  top: 23px;
+  right: 140px;
+  color: #301312;
+  font-size: 20px;
+}
+
+/* Menu */
+#menu{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color:#00000063;
+}
+
+.titulo-menu{
+  font-family: 'Bonoco' !important;
+  color: #254DAE;
+  margin-top: 15px;
+}
+
+.menu-animal-image{
+  object-position: center;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: -3px 3px #254DAE;
+}
+
+.menu-animal-texto{
+  margin-top: 5px;
+  font-family: 'Rubik';
+  color: #254DAE;
+  font-weight: bold;
+}
+
+#menucard{
+  position: absolute;
+  background-image: url(../assets/images/card-postcards.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  top: 15%;
+  left: 25%;
+  right: 0;
+  bottom: 0;
+  width: 700px;
+  height: 400px;
+  filter: drop-shadow(0 0 2rem rgb(0 0 0 / 0.4));
+}
+
+.menu-margin{
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 15px;
+}
+
+.image-animal-deactivated{
+  filter: grayscale(1);
+}
+
+.image-animal-activated{
+  filter: grayscale(0);
+}
+
+/* Tela de ajuda */
+.help-card{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color:#00000063;
+}
+
+.help-card-content{
+  position: absolute;
+  background-image: url(../assets/images/card-mascote.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  top: 10%;
+  left: 25%;
+  right: 0;
+  bottom: 0;
+  width: 700px;
+  height: 500px;
+  filter: drop-shadow(0 0 2rem rgb(0 0 0 / 0.7));
+}
+.carouselCustom{
+  width: 400px;
+  height: 300px;
+  margin-top: 55px;
+  margin-left: 35px;
+}
+
+.titulo-help{
+  font-family: 'Bonoco' !important;
+  color: #000000;
+  margin-top: 15px;
+  width: 560px;
+  margin-top: 30px;
+}
+
+.margin-content-help{
+  margin-left: 55px;
+  margin-right: 50px;
+  font-family: 'Rubik';
+  font-size: 22px;
+  font-weight: 600;
+  margin-top: 10%;
+}
+
+/* Card do Animal */
+.card-1{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color:#00000063;
+}
+
+.animal-card-1{
+  position: absolute;
+  background-image: url(../assets/images/card-animal.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  object-position: center;
+  top: 5%;
+  left: 35%;
+  right: 0;
+  bottom: 0;
+  width: 400px;
+  height: 500px;
+  filter: drop-shadow(0 0 2rem rgb(0 0 0 / 0.7));
+}
+
+.btn-fourth-close{
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: #301312;
+  font-size: 20px;
+}
+
+.titulo-card{
+  font-family: 'Bonoco' !important;
+  color: #254DAE;
+  margin-top: 15px;
+  font-size: 25px;
 }
